===============================================================
Tag name:  rtm1_0_08
Originator(s): mvertens
Date: Sep 24, 2012
One-line Summary: removed references to finidat, fatmlndfrc and nrevsn
                  and clm_rtm_inparm   

M       riverroute/RtmMod.F90
	
===============================================================
Tag name:  rtm1_0_07
Originator(s): mvertens
Date: Sep 24, 2012
One-line Summary: update documentation in config_definition.xml
	          and user_nl_rtm

M       bld/user_nl_rtm
M       bld/namelist_files/namelist_definition_rtm.xml
	
M       src/riverroute/RtmMod.F90
        - no longer output fatmlndfrc to standard out

===============================================================
Tag name:  rtm1_0_06
Originator(s): tcraig
Date: Sep 24, 2012
One-line Summary: fix rtm_nsteps usage when rtm if off

M       src/riverroute/RtmMod.F90
===============================================================
Tag name:  rtm1_0_05
Originator(s): mvertens
Date: Sep 23, 2012
One-line Summary: bugfix for rtm history restarts files using pnetcdf

fixed reference to finc and fexcl - plus other minor cleanups	

M       src/riverroute/RtmMod.F90
M       src/riverroute/RtmHistFile.F90
M       src/cpl_esmf/rof_comp_esmf.F90
	
===============================================================
Tag name:  rtm1_0_04
Originator(s): tcraig
Date: Sep 13, 2012
One-line Summary: updates from clm4_0_44 to clm4_0_46 for rtm

M       bld/namelist_files/namelist_defaults_rtm.xml
M       src/riverroute/RtmMod.F90
===============================================================
Tag name:  rtm1_0_03
Originator(s): tcraig
Date: Mon Sep 4, 2012
One-line Summary: add budget check, minor cleanup

M       src/cpl_mct/rof_comp_mct.F90
M       src/riverroute/RtmMod.F90
M       src/riverroute/RunoffMod.F90
	
===============================================================
Tag name:  rtm1_0_02
Originator(s): tcraig
Date: Mon Aug 27, 2012